<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:layout_margin="@dimen/layout_margin"
                    android:textAlignment="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/instructionTitle"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_inventory_description"
                    android:layout_margin="@dimen/layout_margin"
                    android:textAlignment="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionTitle"
                    android:id="@+id/instructionDescription"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/seeShoeListButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:text="@string/see_shoe_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>