<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ShoeDetailFragment"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:id="@+id/shoe_name_layout"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:layout_weight="20"/>

            <EditText
                android:id="@+id/shoe_name_edit_text"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@={shoe.name}"
                android:hint="@string/shoe_name"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/shoe_company_layout"
            android:layout_margin="@dimen/layout_margin"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_company"
                android:layout_weight="20"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@={shoe.company}"
                android:hint="@string/shoe_company"
                android:id="@+id/shoe_company_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_weight="80"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/shoe_size_layout"
            android:layout_margin="@dimen/layout_margin"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:layout_weight="20"/>

            <EditText
                android:id="@+id/shoe_size_edit_text"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@={``+shoe.size}"
                android:hint="@string/shoe_size"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/shoe_description_layout"
            android:layout_margin="@dimen/layout_margin"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_description"
                android:layout_weight="20"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/shoe_description"
                android:text="@={shoe.description}"
                android:id="@+id/shoe_description_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_weight="80"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/shoe_button_layout"
            android:layout_margin="@dimen/layout_margin"
            android:weightSum="100">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:id="@+id/cancel_button"
                android:layout_weight="50"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_weight="50"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>